--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
-    "oidc-client": "~1.10.1"
+    "oidc-client": "~1.10.1",
+    "bootstrap": "~4.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
